whisper-webui/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: app
  name: app
spec:
  ports:
    - name: "7860"
      port: 7860
      targetPort: 7860
  selector:
    io.kompose.service: app
